refactor: restructure components and styles for pets, agendamentos, and notificacoes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,3 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>
-      <mat-toolbar-row>Pets</mat-toolbar-row>
-      <mat-toolbar-row>
-        <button mat-flat-button>Cadastrar pet</button>
-      </mat-toolbar-row>
-    </mat-toolbar>
-    <mat-nav-list class="sidenav-list">
-      <a mat-list-item href="/pets">Pets cadastrados</a>
-      <a mat-list-item href="/agendamentos">Agendamentos</a>
-      <a mat-list-item href="/notificacoes">Notificações</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      @if (isHandset$ | async) {
-        <button
-          type="button"
-          aria-label="Toggle sidenav"
-          mat-icon-button
-          (click)="drawer.toggle()">
-          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-        </button>
-      }
-      <span>desafio-angular</span>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-    <router-outlet />
-  </mat-sidenav-content>
-</mat-sidenav-container>
-
-
+<app-navigation>
+  <router-outlet />
+</app-navigation>
