--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -22,9 +22,9 @@
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         </button>
       }
-      <span>desafio-angular</span>
+      <span>{{pageTitle}}</span>
     </mat-toolbar>
-    <!-- Add Content Here -->
-    <router-outlet />
+
+    <ng-content #name></ng-content>
   </mat-sidenav-content>
 </mat-sidenav-container>
