--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,11 @@
-<mat-toolbar >
-  <h1>Header</h1>
-  <button mat-flat-button>Cadastrar pet</button>
+<mat-toolbar color="primary">
+  <div class="navbar">
+    <h1>Header</h1>
+    <nav>
+      <a mat-button routerLink="/pets" routerLinkActive="router-link-active" >Pets</a>
+      <a mat-button routerLink="/agendamentos" routerLinkActive="router-link-active">Agendamentos</a>
+      <a mat-button routerLink="/notificacoes" routerLinkActive="router-link-active">Notificações</a>
+    </nav>
+  </div>
+  <div><button mat-flat-button>Cadastrar pet</button></div>
 </mat-toolbar>
