--- a/src/app/shared/components/section-header/section-header.component.html
+++ b/src/app/shared/components/section-header/section-header.component.html
@@ -8,5 +8,5 @@
       <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
     </button>
   }
-  <span>desafio-angular</span>
+  <span>{{pageTitle}}</span>
 </mat-toolbar>
