feat: adiciona os componentes e servicices para gerenciamento dos pets

--- a/src/app/feature/pets/view/pets.component.html
+++ b/src/app/feature/pets/view/pets.component.html
@@ -6,5 +6,5 @@
       <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
   </div>
-  <p>pets works!</p>
+  <app-petList></app-petList>
 </div>
