--- a/src/app/feature/pets/view/pets.component.html
+++ b/src/app/feature/pets/view/pets.component.html
@@ -2,10 +2,10 @@
 <div class="container">
   <div class="search-container">
     <mat-form-field>
-      <input #searchInput matInput type="search" placeholder="Buscar pet" [(ngModel)]="searchTerm" (ngModelChange)="searchPets(searchInput.value)">
+      <input #searchInput matInput type="search" placeholder="Buscar pet" [formControl]="searchControl">
       <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
   </div>
-  
+
   <app-petList [pets]="pets"></app-petList>
 </div>
