feat: add CadastroPet component and routing, update navigation links

--- a/src/app/feature/pets/view/pets.component.html
+++ b/src/app/feature/pets/view/pets.component.html
@@ -6,6 +6,6 @@
       <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
   </div>
-
+  <router-outlet/>
   <app-petList [pets]="pets"></app-petList>
 </div>
