--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,43 @@
-/* You can add global styles to this file, and also import other style files */
+@use '_theme-colors.scss' as my-theme;
+@use '@angular/material' as mat;
 
+html {
+  // Apply the dark theme by default
+  @include mat.theme((
+    color: (
+      primary: my-theme.$primary-palette,
+      tertiary: my-theme.$tertiary-palette,
+      theme-type: light,
+    ),
+    typography: (
+      plain-family: Roboto,
+      brand-family: Open Sans,
+      bold-weight: 900,
+      medium-weight: 500,
+      regular-weight: 300,
+    ),
+    density: 0,
+  ));
+
+  // Use high contrast dark theme colors when users prefer contrast
+  /* @media (prefers-contrast: more) {
+    @include my-theme.high-contrast-overrides(dark);
+  } */
+}
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0;  }
 
 .container {
   width: 90%;
+  height: 100%;
   margin: 0 auto;
   //border: 1px solid #ff4f4f;
   padding: 2rem 0;
 }
+
+.active{
+    background-color: var(--mat-sys-primary);
+    color: var(--mat-sys-on-primary);
+}
+
 
