--- a/src/app/feature/pets/view/pets.component.html
+++ b/src/app/feature/pets/view/pets.component.html
@@ -1,10 +1,9 @@
 
 <div class="container">
   <div class="search-container">
-    <mat-form-field>
-      <input #searchInput matInput type="search" placeholder="Buscar pet" [formControl]="searchControl">
-      <mat-icon matSuffix>search</mat-icon>
-    </mat-form-field>
+    <div>
+      <input type="search" placeholder="Buscar pet" [formControl]="searchControl">
+    </div>
   </div>
   <router-outlet/>
   <app-petList [pets]="pets"></app-petList>
