--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-
-<router-outlet />
+<div class="">
+    <!-- <header class="flex items-center p-4 bg-sky-400">
+        <h1 class="text-4xl mr-10">Pets</h1>
+        <nav class="header-menu">
+            <a routerLink="/pets" routerLinkActive="active">Pets</a>
+            <a routerLink="/agendamentos" routerLinkActive="active">Agendamentos</a>
+            <a routerLink="/notificacoes" routerLinkActive="active">Notificações</a>
+        </nav>
+    </header> -->
+    <app-menu-lateral></app-menu-lateral>
+    <router-outlet />
+</div>
 
