--- a/src/app/feature/cadastro-pets/view/cadastro-pet/cadastro-pet.component.html
+++ b/src/app/feature/cadastro-pets/view/cadastro-pet/cadastro-pet.component.html
@@ -1,3 +1,63 @@
-<div class="container bg-red">
-    <p>cadastro-pet works!</p>
+
+<div class="container max-w-2xl flex flex-col gap-8">
+
+        <h1 class="text-4xl">Cadastro de pet</h1>
+
+        <form class="w-full grid grid-cols-4 gap-4" [formGroup]="petsForm" (ngSubmit)="handleSubmit()">
+            <!-- <div class="flex gap-4 w-full"> -->
+                <p-iftaLabel class="col-span-3">
+                    <label for="nome">Nome do pet</label>
+                    <input  pInputText id="nome" formControlName="nome" pSize="small" fluid required/>
+                </p-iftaLabel>
+
+                <p-iftaLabel class="">
+                    <p-select [options]="especies" inputId="especie" formControlName="especie" (onChange)="onEspecieSelect($event)" size="small" fluid/>
+                    <label for="especie">Espécie</label>
+                </p-iftaLabel>
+            <!-- </div> -->
+
+            <p-iftaLabel class="col-span-2">
+                <label for="tutor">Tutor</label>
+                <input pInputText id="tutor" formControlName="tutor" size="small" fluid/>
+            </p-iftaLabel>
+            <p-iftaLabel class="col-span-2">
+                <label for="emailTutor">Email do tutor</label>
+                <input pInputText id="emailTutor" formControlName="emailTutor" size="small" fluid/>
+            </p-iftaLabel>
+
+            <p-iftaLabel class="col-span-1">
+                <p-autocomplete formControlName="raca" id="raca" [suggestions]="filteredItems" (completeMethod)="filterItems($event)" size="small" fluid/>
+                <label for="raca">Raça</label>
+            </p-iftaLabel>
+
+            <!-- <div class="flex w-full gap-4"> -->
+            <!-- </div> -->
+
+            <p-iftaLabel class="col-span-1">
+                <p-inputnumber id="peso" mode="decimal" formControlName="peso" maxFractionDigits="1" size="small" fluid/>
+                <label for="peso">Peso do pet</label>
+            </p-iftaLabel>
+
+            <p-iftaLabel class="col-span-1">
+                <label for="idade">Idade do pet</label>
+                <input pInputText id="idade" formControlName="idade" size="small" fluid/>
+            </p-iftaLabel>
+
+            <p-iftaLabel>
+                <label for="cor">Cor do pet</label>
+                <input pInputText id="cor" formControlName="cor" size="small" fluid/>
+            </p-iftaLabel>
+
+            <p-iftaLabel class="col-span-4">
+                <label for="descricao">Descrição do pet</label>
+                <!-- <input pInputText id="descricao" formControlName="descricao" size="small" fluid/> -->
+                <textarea rows="5"cols="30" pTextarea id="descricao" [autoResize]="true" formControlName="descricao" fluid></textarea>
+            </p-iftaLabel>
+
+            <p-iftaLabel>
+                <p-button label="Cadastrar" type="submit" size="small"/>
+            </p-iftaLabel>
+
+        </form>
+
 </div>
