--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 @import "primeicons/primeicons.css";
 
 html, body { height: 100%; }
-body { margin: 0;  }
+body { margin: 0; background-color: var(--p-surface-100);  }
 
 @layer base {
     h1 {
