--- a/src/app/feature/pets/components/petList/petList.component.css
+++ b/src/app/feature/pets/components/petList/petList.component.css
@@ -1,6 +1,3 @@
-div {
-  padding: 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-  gap: 1rem;
+p-dataview-content {
+    border-radius: 2rem;
 }
