--- a/src/app/feature/pets/components/petList/petList.component.html
+++ b/src/app/feature/pets/components/petList/petList.component.html
@@ -1,5 +1,35 @@
-<div>
-  @for (pet of pets; track pet.id) {
-    <app-pet-card [pet]="pet"></app-pet-card>
-  }
+<div class="flex flex-col w-[70%] mx-auto mt-16 overflow-hidden rounded-3xl">
+  <p-dataview #dv [value]="pets" [layout]="'list'">
+    <ng-template #list let-pets: Pet[] >
+        <div class="grid grid-cols-12 gap-4 grid-nogutter p-8 ">
+            @for (pet of pets; track pet.id) {
+                <div class="col-span-12 border-b p-4 pt-4 pb-8 border-gray-200">
+                    <div class="flex flex-row items-center gap-4 ">
+                        <img [src]="pet.imagem" [alt]="pet.nome" class="w-24 h-24 rounded">
+
+                        <div class="flex">
+                            <div class="flex flex-row md:flex-col justify-between items-start gap-2">
+                                <div>
+                                    <span class="font-medium text-secondary text-sm">{{ pet.raca }}</span>
+                                    <div class="text-xl font-medium mt-2">{{ pet.nome }}</div>
+                                    <span class="text-sm">de {{
+                                        pet.tutor
+                                    }}</span>
+                                </div>
+
+                                <div class="flex flex-row gap-2">
+                                    <p-button label="Editar" icon="pi pi-pencil" class="p-button-rounded p-button-text" (click)="editPet(pet.id!)"></p-button>
+                                    <p-button label="Excluir" icon="pi pi-trash" class="p-button-rounded p-button-text" (click)="deletePet(pet.id!)"></p-button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+
+    </ng-template>
+
+
+  </p-dataview>
 </div>
