--- a/src/app/feature/pets/components/petList/petList.component.html
+++ b/src/app/feature/pets/components/petList/petList.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col w-[70%] mx-auto mt-16 overflow-hidden rounded-3xl">
+<div class="flex flex-col mx-auto mt-16 overflow-hidden rounded-3xl">
   <p-dataview #dv [value]="pets" [layout]="'list'">
     <ng-template #list let-pets: Pet[] >
         <div class="grid grid-cols-12 gap-4 grid-nogutter p-8 ">
@@ -18,8 +18,11 @@
                                 </div>
 
                                 <div class="flex flex-row gap-2">
-                                    <p-button label="Editar" icon="pi pi-pencil" class="p-button-rounded p-button-text" (click)="editPet(pet.id!)"></p-button>
-                                    <p-button label="Excluir" icon="pi pi-trash" class="p-button-rounded p-button-text" (click)="deletePet(pet.id!)"></p-button>
+                                    
+                                    <a class="p-button p-button-text"
+                                        [routerLink]="['/pets', pet.id]"
+                                        (click)="showDetails(pet.id!)"
+                                    >Exibir detalhes</a>
                                 </div>
                             </div>
                         </div>
