--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,11 @@ body { margin: 0; background-color: var(--p-surface-100);  }
 
 @layer base {
     h1 {
+        font-size: var(--text-3xl);
+        font-weight: var(--font-bold);
+    }
+
+    h2 {
         font-size: var(--text-2xl);
         font-weight: var(--font-bold);
     }
