--- a/src/styles.css
+++ b/src/styles.css
@@ -17,11 +17,12 @@ body { margin: 0; background-color: var(--p-surface-100);  }
     }
 }
 
-.container {
-  width: 90%;
-  height: 100%;
-  margin: 0 auto;
-  padding: 2rem 0;
+.card {
+    background-color: var(--p-surface-200);
+    border-radius: var(--radius-lg);
+    box-shadow: var(--shadow-md);
+    padding: calc(var(--spacing) * 4);
+    margin: var(--spacing);
 }
 
 
