--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-menu></app-menu>
-<div class="container mx-auto px-4 py-8">
+<div class="@container mx-auto px-4 py-8">
     <router-outlet />
 </div>
 
