--- a/src/app/feature/cadastro-pets/view/cadastro-pet/cadastro-pet.component.html
+++ b/src/app/feature/cadastro-pets/view/cadastro-pet/cadastro-pet.component.html
@@ -1,63 +1,171 @@
+<div class="max-w-2xl mx-auto flex flex-col items-center gap-8">
+    <h1 class="text-4xl">Cadastro de pet</h1>
 
-<div class="container max-w-2xl flex flex-col gap-8">
+    <form
+        class="w-full grid grid-cols-1 @md:grid-cols-4 gap-4"
+        [formGroup]="petsForm"
+        (ngSubmit)="handleSubmit()"
+    >
+        <!-- <div class="flex gap-4 w-full"> -->
+        <p-iftaLabel class="@md:col-span-3 @sm:col-span-2">
+            <label for="nome">Nome do pet</label>
+            <input
+                pInputText
+                id="nome"
+                formControlName="nome"
+                pSize="small"
+                fluid
+                required
+            />
+        </p-iftaLabel>
 
-        <h1 class="text-4xl">Cadastro de pet</h1>
+        <p-iftaLabel class="@md:col-span-1 @sm:col-span-2">
+            <p-select
+                [options]="especies"
+                inputId="especie"
+                formControlName="especie"
+                (onChange)="onEspecieSelect($event)"
+                size="small"
+                fluid
+            />
+            <label for="especie">Espécie</label>
+        </p-iftaLabel>
+        <!-- </div> -->
 
-        <form class="w-full grid grid-cols-4 gap-4" [formGroup]="petsForm" (ngSubmit)="handleSubmit()">
-            <!-- <div class="flex gap-4 w-full"> -->
-                <p-iftaLabel class="col-span-3">
-                    <label for="nome">Nome do pet</label>
-                    <input  pInputText id="nome" formControlName="nome" pSize="small" fluid required/>
-                </p-iftaLabel>
+        <p-iftaLabel class="@sm:col-span-2">
+            <label for="tutor">Tutor</label>
+            <input
+                pInputText
+                id="tutor"
+                formControlName="tutor"
+                size="small"
+                fluid
+            />
+        </p-iftaLabel>
+        <p-iftaLabel class="@sm:col-span-2">
+            <label for="emailTutor">Email do tutor</label>
+            <input
+                pInputText
+                type="email"
+                id="emailTutor"
+                formControlName="emailTutor"
+                size="small"
+                fluid
+            />
+        </p-iftaLabel>
 
-                <p-iftaLabel class="">
-                    <p-select [options]="especies" inputId="especie" formControlName="especie" (onChange)="onEspecieSelect($event)" size="small" fluid/>
-                    <label for="especie">Espécie</label>
-                </p-iftaLabel>
-            <!-- </div> -->
+        <p-iftaLabel class="@sm:col-span-2">
+            <p-autocomplete
+                formControlName="raca"
+                id="raca"
+                [suggestions]="filteredItems"
+                (completeMethod)="filterItems($event)"
+                size="small"
+                fluid
+            />
+            <label for="raca">Raça</label>
+        </p-iftaLabel>
 
-            <p-iftaLabel class="col-span-2">
-                <label for="tutor">Tutor</label>
-                <input pInputText id="tutor" formControlName="tutor" size="small" fluid/>
-            </p-iftaLabel>
-            <p-iftaLabel class="col-span-2">
-                <label for="emailTutor">Email do tutor</label>
-                <input pInputText id="emailTutor" formControlName="emailTutor" size="small" fluid/>
-            </p-iftaLabel>
+        <!-- <div class="flex w-full gap-4"> -->
+        <!-- </div> -->
 
-            <p-iftaLabel class="col-span-1">
-                <p-autocomplete formControlName="raca" id="raca" [suggestions]="filteredItems" (completeMethod)="filterItems($event)" size="small" fluid/>
-                <label for="raca">Raça</label>
-            </p-iftaLabel>
+        <p-iftaLabel class="@sm:col-span-2">
+            <p-inputnumber
+                id="peso"
+                mode="decimal"
+                formControlName="peso"
+                maxFractionDigits="1"
+                size="small"
+                fluid
+            />
+            <label for="peso">Peso do pet</label>
+        </p-iftaLabel>
 
-            <!-- <div class="flex w-full gap-4"> -->
-            <!-- </div> -->
+        <p-iftaLabel class="@sm:col-span-2">
+            <label for="idade">Idade do pet</label>
+            <input
+                pInputText
+                id="idade"
+                formControlName="idade"
+                size="small"
+                fluid
+            />
+        </p-iftaLabel>
 
-            <p-iftaLabel class="col-span-1">
-                <p-inputnumber id="peso" mode="decimal" formControlName="peso" maxFractionDigits="1" size="small" fluid/>
-                <label for="peso">Peso do pet</label>
-            </p-iftaLabel>
+        <p-iftaLabel class="@sm:col-span-2">
+            <label for="cor">Cor do pet</label>
+            <input
+                pInputText
+                id="cor"
+                formControlName="cor"
+                size="small"
+                fluid
+            />
+        </p-iftaLabel>
 
-            <p-iftaLabel class="col-span-1">
-                <label for="idade">Idade do pet</label>
-                <input pInputText id="idade" formControlName="idade" size="small" fluid/>
-            </p-iftaLabel>
+        <p-iftaLabel class="@sm:col-span-4">
+            <label for="descricao">Descrição do pet</label>
+            <!-- <input pInputText id="descricao" formControlName="descricao" size="small" fluid/> -->
+            <textarea
+                rows="5"
+                cols="30"
+                pTextarea
+                id="descricao"
+                [autoResize]="true"
+                formControlName="descricao"
+                fluid
+            ></textarea>
+        </p-iftaLabel>
 
-            <p-iftaLabel>
-                <label for="cor">Cor do pet</label>
-                <input pInputText id="cor" formControlName="cor" size="small" fluid/>
-            </p-iftaLabel>
+        <p-iftaLabel>
+            <p-button
+                label="Cadastrar"
+                type="submit"
+                size="small"
+                [disabled]="petsForm.invalid"
+            />
+        </p-iftaLabel>
+    </form>
 
-            <p-iftaLabel class="col-span-4">
-                <label for="descricao">Descrição do pet</label>
-                <!-- <input pInputText id="descricao" formControlName="descricao" size="small" fluid/> -->
-                <textarea rows="5"cols="30" pTextarea id="descricao" [autoResize]="true" formControlName="descricao" fluid></textarea>
-            </p-iftaLabel>
+    <div class="p-4">
+        <p-dialog
+            header="Pet cadastrado com sucesso!"
+            [modal]="true"
+            [(visible)]="visible"
+            styleClass="m-4"
+        >
+            <p class="p-text-secondary block mb-8">
+                Parabéns pelo cadastro, seu pet ganhou um cuidado grátis! Em
+                Breve você recerá um email para fazer o agendamento
+            </p>
+            <div
+                class="flex flex-col-reverse @md:flex-row @md:justify-end @md:items-center gap-2"
+            >
+                <a href="/pets">
+                    <p-button
+                        label="Lista de pets"
+                        severity="secondary"
+                        (click)="visible = false"
+                        size="small"
+                        fluid="true"
+                    />
+                </a>
 
-            <p-iftaLabel>
-                <p-button label="Cadastrar" type="submit" size="small"/>
-            </p-iftaLabel>
+                <p-button
+                    label="Ver detalhes"
+                    severity="info"
+                    (click)="verDetalhes()"
+                    size="small"
+                    fluid="true"
+                />
 
-        </form>
-
+                <p-button
+                    label="Cadastrar outro pet"
+                    (click)="visible = false"
+                    size="small"
+                    fluid="true"
+                />
+            </div>
+        </p-dialog>
+    </div>
 </div>
