--- a/src/app/feature/pets/components/petList/petList.component.html
+++ b/src/app/feature/pets/components/petList/petList.component.html
@@ -5,16 +5,18 @@
         <h2 class="text-2xl font-bold text-gray-800">Lista de Pets</h2>
 
         <div class="flex flex-col sm:flex-row gap-3 w-full md:w-auto">
-            <span class="p-input-icon-left w-full">
-                <i class="pi pi-search"></i>
-                <input pInputText placeholder="Buscar..." class="w-full" [formControl]="inputDeBusca"/>
-            </span>
+
+            <p-iconfield>
+
+                <input pInputText placeholder="Buscar..." class="" [formControl]="inputDeBusca" fluid/>
+                <p-inputicon styleClass="pi pi-search" />
+            </p-iconfield>
 
             <p-select
                 [(ngModel)]="selectedEspecie"
                 [options]="especies"
                 placeholder="Todas espécies"
-                optionLabel="nome"
+                optionLabel="nome"                                                                                                                                                 
                 (onChange)="filtrarPorEspecie($event)"
                 class="w-full sm:w-auto"
             />
