feat: adiciona notificação de sucesso ao fechar agendamento, ajusta tipos de resposta e refatora componentes de agendamento

--- a/src/app/feature/agendamentos/novo-agendamento/novo-agendamento.component.html
+++ b/src/app/feature/agendamentos/novo-agendamento/novo-agendamento.component.html
@@ -1,5 +1,6 @@
 <!-- novo-agendamento.component.html -->
 <div class="container mx-auto px-4 py-8">
+    <p-toast life="3000" (onClose)="onClose()" position="top-center"/>
     <div class="max-w-3xl mx-auto bg-white rounded-lg shadow-md p-6">
         <!-- Header -->
         <div class="flex items-center gap-4 mb-8">
