--- a/src/app/feature/agendamentos/reagendamento/reagendamento.component.html
+++ b/src/app/feature/agendamentos/reagendamento/reagendamento.component.html
@@ -1,7 +1,7 @@
-<div class="h-screen grid place-items-center">
+<div class=" grid place-items-center mt-24">
 
     <p-toast life="3000" key="confirm" (onClose)="onClose()" position="top-center"/>
-    <div class="card w-xl m-auto">
+    <div class="card w-5/6 @md:w-6/12">
         <h1>Reagendar</h1>
         <div class="flex flex-col gap-4">
             <p-datepicker [(ngModel)]="data" dateFormat="dd/mm/yy" [showTime]="true" [hourFormat]="'24'" [minDate]="today"/>
