--- a/src/app/feature/cadastro-pets/cadastro-pet.component.html
+++ b/src/app/feature/cadastro-pets/cadastro-pet.component.html
@@ -141,7 +141,7 @@
             <div
                 class="flex flex-col-reverse @md:flex-row @md:justify-end @md:items-center gap-2"
             >
-                <a href="/pets">
+                <a [routerLink]="['/pets']">
                     <p-button
                         label="Lista de pets"
                         severity="secondary"
