--- a/src/app/feature/pets/petList.component.html
+++ b/src/app/feature/pets/petList.component.html
@@ -16,7 +16,7 @@
                 [(ngModel)]="selectedEspecie"
                 [options]="especies"
                 placeholder="Todas espécies"
-                optionLabel="nome"                                                                                                                                                 
+                optionLabel="nome"
                 (onChange)="filtrarPorEspecie($event)"
                 class="w-full sm:w-auto"
             />
@@ -38,7 +38,7 @@
     <p-card class="hover:shadow-lg transition-shadow duration-300">
         <ng-template pTemplate="header">
             <img
-                [src]="pet.imagem || 'assets/default-pet.jpg'"
+                [src]="pet.imagem"
                 [alt]="pet.nome"
                 class="w-full h-48 object-cover"
             />
@@ -68,7 +68,7 @@
                     icon="pi pi-ellipsis-h"
                     [routerLink]="['/pets', pet.id]"
                     class="p-button-sm p-button-text"
-                ></button>
+                >Ver detalhes</button>
             </div>
         </ng-template>
     </p-card>
